[package]
name = "monad-monitor"
version = "0.1.0"
edition = "2021"
description = "A lightweight TUI monitor for Monad nodes"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# JSON handling
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async stream for crossterm events
futures = "0.3"

# Error handling
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
