[package]
name = "monad-monitor"
version = "0.1.3"
edition = "2021"
description = "A lightweight TUI monitor for Monad nodes"
license = "MIT"
repository = "https://github.com/portdeveloper/monad-monitor"
homepage = "https://github.com/portdeveloper/monad-monitor"
readme = "README.md"
keywords = ["monad", "blockchain", "tui", "monitor", "terminal"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

# HTTP client (for metrics endpoint)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# WebSocket client (for RPC)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

# JSON handling
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async stream for crossterm events
futures = "0.3"

# Error handling
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
